plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.freetime.geoweather'
    compileSdk 36

    defaultConfig {
        applicationId "com.freetime.geoweather"
        minSdk 24
        targetSdk 36
        versionCode 1
        versionName '1.0.0'

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    implementation 'com.google.android.material:material:1.12.0'
    implementation "androidx.appcompat:appcompat:1.7.0"
    implementation "androidx.cardview:cardview:1.0.0"
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.preference
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}